Push to Classroom Repo

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "1a381545",
    "metadata": {},
    "outputs": [],
@@ -54,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9890a043",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Dataset/insurance.csv\")"
+    "df = pd.read_csv(\"Dataset/insurance.csv\")\n"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d8f9f745",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "8de9fc47",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "8dbd8f3b",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "<Figure size 1400x1000 with 0 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "788ababb",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "Text(0.5, 1.0, 'Distribution of Insurance Charges')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "36036256",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "4557543d",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "d4d91b83",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "56d12539",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "42d59b93",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "aef2f594",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "f8a37203",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7479e70b",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "fdbc5e4c",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "341eeddf",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "147eece8",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "ccbf7948",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "eb25c6cb",
    "metadata": {},
    "outputs": [
@@ -872,8 +872,8 @@
    "source": [
     "##### 6. References (Harvard Style)\n",
     "\n",
-    "##### Kaggle (2024) *Medical Cost Personal Dataset*. Available at: https://www.kaggle.com/datasets/mirichoi0218/insurance (Accessed: 21 April 2025).\n",
-    "##### IBM (2024) *What is data preprocessing?*. Available at: https://developer.ibm.com/articles/data-preprocessing-in-detail/?mhsrc=ibmsearch_a&mhq=data%20preprocessing (Accessed: 21 April 2025).\n",
+    "##### Kaggle (2024) *Medical Cost Personal Dataset*. Available at: https://www.kaggle.com/datasets/mirichoi0218/insurance (Accessed: 19 April 2025).\n",
+    "##### IBM (2024) *What is data preprocessing?*. Available at: https://developer.ibm.com/articles/data-preprocessing-in-detail/?mhsrc=ibmsearch_a&mhq=data%20preprocessing (Accessed: 19 April 2025).\n",
     "##### Scikit-learn (2024) *Linear models*. Available at: https://scikit-learn.org/stable/modules/linear_model.html (Accessed: 21 April 2025).\n",
     "##### DataCamp (2024) *Exploratory Data Analysis in Python*. Available at: https://www.datacamp.com/tutorial/exploratory-data-analysis-python (Accessed: 21 April 2025).\n",
     "##### Analytics Vidhya (2024) *Feature Selection Techniques in Machine Learning*. Available at: https://www.analyticsvidhya.com/blog/2020/10/feature-selection-techniques-in-machine-learning/ (Accessed: 21 April 2025).\n",
@@ -883,8 +883,8 @@
     "##### W3Schools (2024) Matplotlib Histograms. Available at: https://www.w3schools.com/python/matplotlib_histograms.asp (Accessed: 25 April 2025).\n",
     "##### W3Schools (2024) Pandas - Plotting. Available at: https://www.w3schools.com/python/pandas/pandas_plotting.asp (Accessed: 25 April 2025).\n",
     "##### W3Schools (2024) Matplotlib Tutorial. Available at: https://www.w3schools.com/python/matplotlib_intro.asp (Accessed: 25 April 2025).\n",
-    "##### Stack Overflow (2015) What is exactly sklearn.pipeline.Pipeline?. Available at: https://stackoverflow.com/questions/33091376/what-is-exactly-sklearn-pipeline-pipeline (Accessed: 25 April 2025).\n",
-    "##### Stack Overflow (2015) What is exactly sklearn.pipeline.Pipeline?. Available at: https://stackoverflow.com/questions/33091376/what-is-exactly-sklearn-pipeline-pipeline (Accessed: 25 April 2025).\n"
+    "##### Stack Overflow (2015) What is exactly sklearn.pipeline.Pipeline?. Available at: https://stackoverflow.com/questions/33091376/what-is-exactly-sklearn-pipeline-pipeline (Accessed: 20 April 2025).\n",
+    "##### Stack Overflow (2015) What is exactly sklearn.pipeline.Pipeline?. Available at: https://stackoverflow.com/questions/33091376/what-is-exactly-sklearn-pipeline-pipeline (Accessed: 20 April 2025).\n"
    ]
   }
  ],
